maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
  setup()
  
}

def setup() {
  setIndication(foundBaggle(true),foundBaggle(false),0)
}

def arround(x:Int,y:Int,cpt:Int) {
  if(!aMurNord(x,y))
  	setIndication(x-1,y,cpt+1)
  if(!aMurOuest(x,y))
  	setIndication(x,y-1,cpt+1)
}

def isSetupEnd():Boolean = {
  var fin = true
  for(x<-0 to getMondeLargeur()-1)
  {
    for(y<-0 to getMondehauteur()-1)
    {
      if(getIndication(x,y)==9999)
      {
        fin = false
      }	
    }
  }
  return fin
}

def foundBaggle(b:Boolean):Int = {
  var bx = -1
  var by = -1
  for(x<-0 to getMondeLargeur()-1)
  {
    for(y<-0 to getMondeHauteur()-1)
    {
      if(aBiscuit(x,y))
      {
        bx=x
        by=y
      }
    }
  }
  if(b)
  	return bx
  else
  	return by
}